<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pass</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="menu_settings">Setting</string>
    
    <!-- Option -->
	<string name="wifi_setting">WIFI</string>
		<string name="wifi_auto_scan_key">wifi_auto_scan</string>
		<string name="wifi_auto_scan">Auto scan</string>
		<string name="wifi_auto_scan_enable">Enable</string>
		<string name="wifi_auto_scan_disable">Disable</string>
		
		<string name="wifi_notification_user_key">wifi_notification_user</string>
		<string name="wifi_notification_user">Notification user</string>
		<string name="wifi_notification_user_enable">Enable</string>
		<string name="wifi_notification_user_disable">Disable</string>
		
		<string name="wifi_update_interval_key">wifi_update_interval</string>
		<string name="wifi_update_interval">Update interval</string>
		<string name="wifi_update_interval_summary">Setting update time</string>

</resources>