<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/wifi_setting" >
        <CheckBoxPreference
            android:key="@string/wifi_auto_scan_key"
            android:defaultValue="true"
            android:title="@string/wifi_auto_scan"
            android:summary="@string/enable" />
 		
        <CheckBoxPreference
            android:key="@string/wifi_notification_user_key"
            android:dependency="@string/wifi_auto_scan_key"
            android:defaultValue="false"
            android:title="@string/wifi_notification_user" 
            android:summary="@string/disable" />

        <ListPreference
            android:key="@string/wifi_update_interval_key"
            android:dependency="@string/wifi_auto_scan_key"
            android:entries="@array/wifi_update_interval"
            android:entryValues="@array/wifi_update_intervalValues"
            android:defaultValue="30"
            android:title="@string/wifi_update_interval" 
            android:summary="@string/wifi_update_interval_summary" />
    </PreferenceCategory>
</PreferenceScreen>